[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/yeerk_palm.png" type="Texture" id=1]
[ext_resource path="res://objects/interactive/base/InteractiveArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/interactive/base/BaseInteractiveObject.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 30, 30 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 30, 30 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="BaseInteractiveObject" type="Node2D"]
script = ExtResource( 3 )

[node name="YeerkPalm" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )
frame = 1
playing = true

[node name="InteractiveArea" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="interact" from="InteractiveArea" to="." method="_interact"]
[connection signal="player_entered" from="InteractiveArea" to="." method="player_entered"]
[connection signal="player_exited" from="InteractiveArea" to="." method="player_exited"]
